[CCAP-721] Add onboarding-2-part.html screen and update tests (#1334)